# Sanctifier

./: .gitattributes  .gitignore  .sanctify.toml  CHECKSUMS.txt  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  INSTALL_HOOKS_COMPLETE.md  LIVE_TESTNET.md  LSP_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.es.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  action.yml  final_message.md  lychee.toml
.github/scripts/: testnet-monitor.js
.github/workflows/: benchmarks.yml  chromatic.yml  ci.yml  contracts-ci.yml  contracts-fuzz.yml  docs-lint.yml  e2e-coverage.yml  provenance.yml  publish.yml  release.yml  rust.yml  soroban-deploy.yml  soroban-examples.yml  testnet-monitor.yml  vscode-extension-ci.yml  vscode-release.yml  winget-scoop.yml
badges/: testnet-monitor.json
browser-extension/: README.md  background.js  build-icons.js  manifest.json  popup.html  popup.js
contracts/amm-pool/: Cargo.toml
contracts/amm-pool/src/: lib.rs
contracts/amm-pool/tests/: proptest_amm.rs
contracts/benchmark/src/: vesting.rs
contracts/bridge/src/: lib.rs
contracts/deposit-withdraw/src/: lib.rs
contracts/fixtures/: xdr_raw_construction.rs
contracts/fixtures/finding-codes/: README.md  s029_timestamp_randomness.rs  s030_require_auth_for_args.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: test.rs
contracts/kani-poc/: Cargo.toml
contracts/multisig/: Cargo.toml
contracts/multisig-no-recovery/: Cargo.toml
contracts/multisig/src/: lib.rs  test.rs
contracts/my-contract/: Cargo.toml
contracts/reentrancy-guard/: README.md
contracts/runtime-guard-wrapper/: Cargo.toml
contracts/security-disclaimers/: Cargo.toml
contracts/security-disclaimers/src/: lib.rs
contracts/security-disclaimers/tests/: integration_tests.rs  security_disclaimers_tests.rs
contracts/test-support/: Cargo.toml
contracts/test-support/src/: asserts.rs  env.rs  lib.rs  token.rs
contracts/timelock/: Cargo.toml
docs/: anomaly-detection.md  api-pricing-limits.md  ci-cd-setup.md  contracts-ci.md  contracts-fuzz.md  getting-started.md  kani-integration.md  lsp-server.md  pricing-limits.md  rule-authoring-guide.md
docs/privacy/: telemetry.md
docs/rules/: require-auth-for-args.md  timestamp-randomness.md
frontend/: .env.local.example  chromatic.config.json  commitlint.config.js  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/.storybook/: preview.ts
frontend/app/: error.tsx  layout.tsx  page.tsx  types.ts
frontend/docs/: CHROMATIC_SETUP_GUIDE.md  VISUAL_REGRESSION_TESTING.md  accessibility-audit.md  accessibility-findings.md
integrations/discord/: .env.example  README.md  bot.py
integrations/stellar-lab/: README.md  index.html  plugin.js  plugin.json
integrations/telegram/: README.md  bot.py
schemas/: analysis-output.json  sanctifier.json  sarif-2.1.0.json
scoop/: sanctifier.json
scripts/: action_inputs.py  deploy-soroban-testnet.sh  test-lsp-integration.sh  test-lsp-server.sh
tests/action/: test_action_defaults.py  test_action_inputs.py
tests/vulnerability_db/: test_searchability.py
tooling/sanctifier-cli/: .sanctify.toml  Cargo.toml
tooling/sanctifier-cli/src/: branding.rs  errors.rs  lib.rs  logging.rs  main.rs  telemetry.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  badge.rs  benchmark.rs  callgraph.rs  color.rs  complexity.rs  deploy.rs  diff.rs  doctor.rs  explain.rs  export.rs  fix.rs  init.rs  install_hooks.rs  lsp.rs  mod.rs  pr_comment.rs  reentrancy.rs  report.rs  report_templates.rs  sarif.rs  serve.rs  storage.rs  suppress.rs  update.rs  upgrade.rs  verify.rs  verify_deployment.rs  webhook.rs  workspace.rs
tooling/sanctifier-cli/src/vulndb/: mod.rs
tooling/sanctifier-cli/tests/: cli_tests.rs  shared_fixtures.rs
tooling/sanctifier-cli/tests/fixtures/: cargo_search_output.txt  macro_heavy.rs  valid_contract.rs  vulnerable_contract.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/benches/: benchmark.rs
tooling/sanctifier-core/src/: complexity.rs  finding_codes.rs  gas_estimator.rs  lib.rs  reentrancy.rs  sdk_version.rs  smt.rs  storage_collision.rs  upgrade_analysis.rs
tooling/sanctifier-core/src/rules/: arithmetic_overflow.rs  crlf_tests.rs  deprecated_sdk_usage.rs  ledger_size.rs  missing_ttl_bump.rs  mod.rs  raw_invoke_contract.rs  reentrancy.rs  require_auth_for_args.rs  shallow_test.rs  static_reentrancy.rs  taint_propagation.rs  timestamp_randomness.rs  transfer_from_no_allowance.rs  truncation_bounds.rs  unsafe_prng.rs  xdr_raw_construction.rs
tooling/sanctifier-core/src/tests/: complexity_tests.rs
tooling/sanctifier-core/tests/: cache_integration_test.rs  concurrency_determinism_test.rs  integration_token_test.rs  sarif_snapshots.rs  shared_fixtures.rs
tooling/sanctifier-core/tests/fixtures/: vulnerable_token.rs
tooling/sanctifier-core/tests/snapshots/: sarif_snapshots__arithmetic_overflow.snap  sarif_snapshots__auth_gap.snap  sarif_snapshots__instance_storage_misuse.snap  sarif_snapshots__missing_state_event.snap  sarif_snapshots__panic_detection.snap  sarif_snapshots__reentrancy.snap  sarif_snapshots__shadow_storage.snap  sarif_snapshots__storage_update_state_check.snap  sarif_snapshots__truncation_bounds.snap  sarif_snapshots__unchecked_external_call.snap  sarif_snapshots__unhandled_result.snap  sarif_snapshots__unsafe_prng.snap  sarif_snapshots__unused_variable.snap  sarif_snapshots__variable_shadowing.snap
tooling/sanctifier-detector/: Cargo.toml
tooling/sanctifier-detector/src/: config.rs  events.rs  lib.rs  main.rs  rules.rs  service.rs  webhook.rs
tooling/sanctifier-wasm/: Cargo.toml
tooling/sanctifier-wasm/src/: analysis.rs  constants.rs  converters.rs  lib.rs  validation.rs
vscode-extension/: .eslintrc.json  .vscodeignore  PRIVACY.md  THREAT_MODEL.md  jest.config.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: analyzer.test.ts  analyzer.ts  devcontainer.test.ts  extension.ts  output-format.test.ts  output-format.ts  sarif.test.ts  sarif.ts  security.ts  telemetry.ts  types.ts  workspace.ts
(+162 files in other folders)
