[workspace]
members = [
    "tooling/sanctifier-core",
    "tooling/sanctifier-cli",
    "tooling/sanctifier-detector",
    "tooling/sanctifier-wasm",
    "contracts/test-support",
    "contracts/security-disclaimers",
    "contracts/vulnerable-contract",
    "contracts/token-with-bugs",
    "contracts/amm-pool",
    "contracts/governance",
    "contracts/multisig",
    "contracts/timelock",
    "contracts/reentrancy-guard",
    "contracts/runtime-guard-wrapper",
    "contracts/kani-poc",
    "contracts/my-contract",
    "contracts/flashloan-token",
    "contracts/proxy",
    "contracts/vesting",
    "contracts/benchmark",
    "contracts/deposit-withdraw",

]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.7.0" }
sanctifier-test-support = { path = "contracts/test-support" }

[workspace.package]
rust-version = "1.78"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
