
[package]
name = "sanctifier-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Sanctifier - Stellar Soroban Security Suite"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/HyperSafeD/Sanctifier"
repository = "https://github.com/HyperSafeD/Sanctifier"
documentation = "https://docs.rs/sanctifier-cli"
keywords = ["soroban", "stellar", "security", "cli", "analysis"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Sanctifier Contributors <maintainers@hypersafed.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
anyhow = "1.0"
sanctifier-core = { version = "0.1.0", path = "../sanctifier-core", default-features = false }
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1.10"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
csv = "1.3"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
warp = "0.3"
tempfile = "3.8"
md5 = "0.7"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
jsonschema = { version = "0.17", default-features = false }
flate2 = "1.0"
tar = "0.4"
walkdir = "2.4"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"


[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.6"
predicates = "3.1"
tempfile = "3.8"

[build-dependencies]
regex = "1.10"
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[lib]
name = "sanctifier_cli"
path = "src/lib.rs"

[[bin]]
name = "sanctifier"
path = "src/main.rs"
