[package]
name = "sanctifier-core"
version = "0.1.0"
edition = "2021"
description = "Static analysis library for Soroban smart contracts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HyperSafeD/Sanctifier"
homepage = "https://github.com/HyperSafeD/Sanctifier"
documentation = "https://docs.rs/sanctifier-core"
keywords = ["soroban", "stellar", "security", "static-analysis", "smart-contracts"]
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]
readme = "README.md"

[features]
default = ["smt", "soroban"]
## Enables the Z3-backed formal-verification pass. Requires libz3 at compile
## time. Disable with default-features = false when targeting wasm32.
smt = ["dep:z3"]
## Enables soroban-sdk dependency (the SanctifiedGuard trait). Disable when
## targeting wasm32 to avoid duplicate panic_impl linker errors.
soroban = ["dep:soroban-sdk"]

[dependencies]
soroban-sdk = { workspace = true, optional = true }
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
regex = "1.10.3"
z3 = { version = "0.12.1", optional = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"
insta = { version = "1.40", features = ["json", "redactions"] }
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false
