
[package]
name = "sanctifier-wasm"
version = "0.2.0"
edition = "2021"
description = "WASM bindings for the Sanctifier analysis engine"
license = "MIT"

# npm package metadata — consumed by wasm-pack
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "sanctifier_wasm"

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
# Skip the smt (z3) feature — z3's C library cannot compile to wasm32
# Also disable soroban-sdk testutils to avoid std dependency in WASM
sanctifier-core = { path = "../sanctifier-core", default-features = false }
soroban-sdk = { workspace = true, default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
